Delimit date strings in initial DB creation SQL. Everywhere else uses bind variables, so this should fix it.

BUG: 301104